# rtic-mre

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs
